# Local-AI-Companion

./: .gitignore  .pr_agent.toml  AGENTS.md  AI-Companion.desktop  CLAUDE.md  LICENSE  README.md  constraints-security.txt  desktop.py  main.py  pytest.ini  requirements-dev.txt  requirements-optional-gemma-omni.txt  requirements-optional-omni.txt  requirements.txt  run_assistant.py  start.sh
assets/: .gitkeep
config/: config.yaml
desktop/: qt_avatar_shell.py
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/src/: main.rs
docs/: asr-profiles.md  desktop-tauri-migration.md  lil-19-security-scan.md  lil-35-voice-benchmark.md  pr-agent-openrouter.md  python-dependency-audit.md  security-audit-baseline.md  security-static-findings.md  security-threat-model.md  tauri-rust-security-audit.md
frontend/: index.html
scripts/: asr_replay_debug.py  benchmark_asr.py  check_mixing.py  cosyvoice3_server.py  create_french_voice.py  create_reference_voice.py  download_march7th_voice.py  generate_refs.py  generate_refs_edge.py  generate_voice_reference.py  install_qwen3_tts_windows.ps1  install_rvc_windows.ps1  list_hf_files.py  profile_latency.py  qwen3_asr_worker.py  qwen3_tts_worker.py  requirements-qwen3-tts-worker.txt  requirements-rvc-worker.txt  run_security_audit_windows.ps1  rvc_worker.py  setup_qwen_vl.sh  smoke_test_chatterbox.py  smoke_test_gemma.py  smoke_test_gemma_whisper_qwen.py  smoke_test_pipeline.py  start_cosyvoice3.sh  start_gpt_sovits.sh  start_llm_server.sh
(+140 files in other folders)
