[package]
name = "local-ai-companion-tauri"
version = "0.1.0"
description = "Desktop shell scaffold for Local AI Companion"
authors = ["Khalil"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-shell = "2.2.0"
